add LOMBOK_OPTS to work with JDK > 21